--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
             <div class="president">
                 <div class="officer" data-aos="fade-up" data-aos-duration="500" data-aos-delay="200">
                     <img 
-                        data-src="images/officer1_lazy.png"
-                        src="images/officer1.png"
+                        src="images/officer1_lazy.png"
+                        dat-src="images/officer1.png"
                         alt="Officer1"
                         class="lazy-load"
                     >
@@ -180,8 +180,8 @@
             <div class="team">
                 <div class="officer" data-aos="fade-up" data-aos-duration="500" data-aos-delay="300">
                     <img
-                        data-src="images/officer2_lazy.png"
-                        src="images/officer2.png"
+                        src="images/officer2_lazy.png"
+                        data-src="images/officer2.png"
                         alt="Officer2"
                         class="lazy-load"
                     >
@@ -192,8 +192,8 @@
                 </div>
                 <div class="officer" data-aos="fade-up" data-aos-duration="500" data-aos-delay="400">
                     <img 
-                        data-src="images/officer3_lazy.png"
-                        src="images/officer3.png"
+                        src="images/officer3_lazy.png"
+                        data-src="images/officer3.png"
                         alt="Officer3"
                         class="lazy-load"
                     >
@@ -204,8 +204,8 @@
                 </div>
                 <div class="officer" data-aos="fade-up" data-aos-duration="500" data-aos-delay="500">
                     <img                         
-                        data-src="images/officer4_lazy.png"
-                        src="images/officer4.png"
+                        src="images/officer4_lazy.png"
+                        data-src="images/officer4.png"
                         alt="Officer4"
                         class="lazy-load"
                     >
@@ -216,8 +216,8 @@
                 </div>
                 <div class="officer" data-aos="fade-up" data-aos-duration="500" data-aos-delay="600">
                     <img 
-                        data-src="images/officer5_lazy.png"
-                        src="images/officer5.png"
+                        src="images/officer5_lazy.png"
+                        data-src="images/officer5.png"
                         alt="Officer5"
                         class="lazy-load"
                         >
@@ -228,8 +228,8 @@
                 </div>
                 <div class="officer" data-aos="fade-up" data-aos-duration="500" data-aos-delay="700">
                     <img 
-                        data-src="images/officer6_lazy.png"
-                        src="images/officer6.png"
+                        src="images/officer6_lazy.png"
+                        data-src="images/officer6.png"
                         alt="Officer6"
                         class="lazy-load"
                     >
@@ -240,8 +240,8 @@
                 </div>
                 <div class="officer" data-aos="fade-up" data-aos-duration="500" data-aos-delay="800">
                     <img 
-                        data-src="images/officer7_lazy.png"
-                        src="images/officer7.png"
+                        src="images/officer7_lazy.png"
+                        data-src="images/officer7.png"
                         alt="Officer7"
                         class="lazy-load"
                     >
