--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 <div class="officer" data-aos="fade-up" data-aos-duration="500" data-aos-delay="200">
                     <img 
                         src="images/officer1_lazy.png"
-                        dat-src="images/officer1.png"
+                        data-src="images/officer1.png"
                         alt="Officer1"
                         class="lazy-load"
                     >
