--- a/index.html
+++ b/index.html
@@ -159,7 +159,13 @@
                 <p>CLASS OFFICERS</p>
             </div>
             <div class="president">
-                <div class="officer" data-aos="fade-up" data-aos-duration="500" data-aos-delay="200">
+                <div class="officer" 
+                    data-aos="zoom-in-down" 
+                    data-aos-easing="ease"
+                    data-aos-duration="500" 
+                    data-aos-delay="200"
+                    >
+                >
                     <img 
                         src="images/officer1_lazy.png"
                         data-src="images/officer1.png"
@@ -173,7 +179,12 @@
                 </div>
             </div>
             <div class="team">
-                <div class="officer" data-aos="fade-up" data-aos-duration="500" data-aos-delay="300">
+                <div class="officer" 
+                    data-aos="zoom-in-down" 
+                    data-aos-easing="ease"
+                    data-aos-duration="500" 
+                    data-aos-delay="300"
+                >
                     <img
                         src="images/officer2_lazy.png"
                         data-src="images/officer2.png"
@@ -185,7 +196,12 @@
                         <p>Marnie Shynne Clamonte</p>
                     </div>
                 </div>
-                <div class="officer" data-aos="fade-up" data-aos-duration="500" data-aos-delay="400">
+                <div class="officer" 
+                    data-aos="zoom-in-down" 
+                    data-aos-easing="ease"
+                    data-aos-duration="500" 
+                    data-aos-delay="400"
+                >
                     <img 
                         src="images/officer3_lazy.png"
                         data-src="images/officer3.png"
@@ -197,7 +213,12 @@
                         <p>Michaella Nicole Ramos</p>
                     </div>
                 </div>
-                <div class="officer" data-aos="fade-up" data-aos-duration="500" data-aos-delay="500">
+                <div class="officer" 
+                    data-aos="zoom-in-down" 
+                    data-aos-easing="ease"
+                    data-aos-duration="500" 
+                    data-aos-delay="500"
+                >
                     <img                         
                         src="images/officer4_lazy.png"
                         data-src="images/officer4.png"
@@ -209,7 +230,12 @@
                         <p>Sarrah Quijano</p>
                     </div>
                 </div>
-                <div class="officer" data-aos="fade-up" data-aos-duration="500" data-aos-delay="600">
+                <div class="officer" 
+                    data-aos="zoom-in-down" 
+                    data-aos-easing="ease"
+                    data-aos-duration="500" 
+                    data-aos-delay="600"
+                >
                     <img 
                         src="images/officer5_lazy.png"
                         data-src="images/officer5.png"
@@ -221,7 +247,12 @@
                         <p>Aljon Rey Apan</p>
                     </div>
                 </div>
-                <div class="officer" data-aos="fade-up" data-aos-duration="500" data-aos-delay="700">
+                <div class="officer" 
+                    data-aos="zoom-in-down" 
+                    data-aos-easing="ease"
+                    data-aos-duration="500" 
+                    data-aos-delay="700"
+                >
                     <img 
                         src="images/officer6_lazy.png"
                         data-src="images/officer6.png"
@@ -233,7 +264,12 @@
                         <p>Leon Laborina</p>
                     </div>
                 </div>
-                <div class="officer" data-aos="fade-up" data-aos-duration="500" data-aos-delay="800">
+                <div class="officer" 
+                    data-aos="zoom-in-down" 
+                    data-aos-easing="ease"
+                    data-aos-duration="500" 
+                    data-aos-delay="800"
+                >
                     <img 
                         src="images/officer7_lazy.png"
                         data-src="images/officer7.png"
