--- a/index.html
+++ b/index.html
@@ -314,11 +314,11 @@
                             data-aos-anchor-placement="center-bottom"
                         >
                             <div class="sub-card-top">
-                                <div class="fade-text">
+                            <!--<div class="fade-text">
                                     <span class="fade-bs">BS</span>
                                     <span class="fade-it">IT</span>
                                     <span class="fade-neust">NEUST</sp>
-                                </div>
+                                </div> -->
                                 <div class="sub-card-top-left">
                                     <p>CODE: <span>CC-101</span></p>
                                     <p>Computer Programming 1, Fundamentals</p>
@@ -383,6 +383,11 @@
                                         <button class="help-button">
                                             <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
                                         </button>
+                                    </div>
+                                    <div class="fade-text">
+                                        <span class="fade-bs">BS</span>
+                                        <span class="fade-it">IT</span>
+                                        <span class="fade-neust">NEUST</sp>
                                     </div>
                                 </div>
                             </div>
