--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                             data-aos-anchor-placement="center-bottom"
                         >
                             <div class="sub-card-top">
-                            <!--<div class="fade-text">
+                           <!-- <div class="fade-text">
                                     <span class="fade-bs">BS</span>
                                     <span class="fade-it">IT</span>
                                     <span class="fade-neust">NEUST</sp>
@@ -400,11 +400,11 @@
                             data-aos-anchor-placement="center-bottom"
                         >
                             <div class="sub-card-top">
-                                <div class="fade-text">
+                            <!--<div class="fade-text">
                                     <span class="fade-bs">BS</span>
                                     <span class="fade-it">IT</span>
                                     <span class="fade-neust">NEUST</sp>
-                                </div>
+                                </div>-->
                                 <div class="sub-card-top-left">
                                     <p>CODE: <span>FIL 1</span></p>
                                     <p>Kontekswalisadong Komunikasyon sa Filipino</p>
@@ -484,6 +484,11 @@
                                             <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
                                         </button>
                                     </div>
+                                    <div class="fade-text">
+                                        <span class="fade-bs">BS</span>
+                                        <span class="fade-it">IT</span>
+                                        <span class="fade-neust">NEUST</sp>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -508,11 +513,6 @@
                             data-aos-anchor-placement="center-bottom"
                         >
                             <div class="sub-card-top">
-                                <div class="fade-text">
-                                    <span class="fade-bs">BS</span>
-                                    <span class="fade-it">IT</span>
-                                    <span class="fade-neust">NEUST</sp>
-                                </div>
                                 <div class="sub-card-top-left">
                                     <p>CODE: <span>GE 07</span></p>
                                     <p>Science, Technology and Society</p>
@@ -587,6 +587,11 @@
                                             <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
                                         </button>
                                     </div>
+                                    <div class="fade-text">
+                                        <span class="fade-bs">BS</span>
+                                        <span class="fade-it">IT</span>
+                                        <span class="fade-neust">NEUST</sp>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -598,11 +603,6 @@
                             data-aos-anchor-placement="center-bottom"
                         >
                             <div class="sub-card-top">
-                                <div class="fade-text">
-                                    <span class="fade-bs">BS</span>
-                                    <span class="fade-it">IT</span>
-                                    <span class="fade-neust">NEUST</sp>
-                                </div>
                                 <div class="sub-card-top-left">
                                     <p>CODE: <span>PE 1</span></p>
                                     <p>Pathfit</p>
@@ -677,6 +677,11 @@
                                             <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
                                         </button>
                                     </div>
+                                    <div class="fade-text">
+                                        <span class="fade-bs">BS</span>
+                                        <span class="fade-it">IT</span>
+                                        <span class="fade-neust">NEUST</sp>
+                                    </div>
                                 </div>
                                 <!-- <li class="topic-item">
                                     <div class="parent">
@@ -704,11 +709,6 @@
                             data-aos-anchor-placement="center-bottom"
                         >
                             <div class="sub-card-top">
-                                <div class="fade-text">
-                                    <span class="fade-bs">BS</span>
-                                    <span class="fade-it">IT</span>
-                                    <span class="fade-neust">NEUST</sp>
-                                </div>
                                 <div class="sub-card-top-left">
                                     <p>CODE: <span>GE 05</span></p>
                                     <p>Purposive Communication</p>
@@ -788,6 +788,11 @@
                                             <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
                                         </button>
                                     </div>
+                                    <div class="fade-text">
+                                        <span class="fade-bs">BS</span>
+                                        <span class="fade-it">IT</span>
+                                        <span class="fade-neust">NEUST</sp>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -812,11 +817,6 @@
                             data-aos-anchor-placement="center-bottom"
                         >
                             <div class="sub-card-top">
-                                <div class="fade-text">
-                                    <span class="fade-bs">BS</span>
-                                    <span class="fade-it">IT</span>
-                                    <span class="fade-neust">NEUST</sp>
-                                </div>
                                 <div class="sub-card-top-left">
                                     <p>CODE: <span>CC-100</span></p>
                                     <p>Introduction to Computing</p>
@@ -891,6 +891,11 @@
                                             <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
                                         </button>
                                     </div>
+                                    <div class="fade-text">
+                                        <span class="fade-bs">BS</span>
+                                        <span class="fade-it">IT</span>
+                                        <span class="fade-neust">NEUST</sp>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -902,11 +907,6 @@
                             data-aos-anchor-placement="center-bottom"
                         >
                             <div class="sub-card-top">
-                                <div class="fade-text">
-                                    <span class="fade-bs">BS</span>
-                                    <span class="fade-it">IT</span>
-                                    <span class="fade-neust">NEUST</sp>
-                                </div>
                                 <div class="sub-card-top-left">
                                     <p>CODE: <span>IT-NET01</span></p>
                                     <p>Networking 1, Fundamentals</p>
@@ -977,6 +977,11 @@
                                             <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
                                         </button>
                                     </div>
+                                    <div class="fade-text">
+                                        <span class="fade-bs">BS</span>
+                                        <span class="fade-it">IT</span>
+                                        <span class="fade-neust">NEUST</sp>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -988,11 +993,6 @@
                             data-aos-anchor-placement="center-bottom"
                         >
                             <div class="sub-card-top">
-                                <div class="fade-text">
-                                    <span class="fade-bs">BS</span>
-                                    <span class="fade-it">IT</span>
-                                    <span class="fade-neust">NEUST</sp>
-                                </div>
                                 <div class="sub-card-top-left">
                                     <p>CODE: <span>CC-101</span></p>
                                     <p>Computer Programming 1, Fundamentals</p>
@@ -1058,6 +1058,11 @@
                                             <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
                                         </button>
                                     </div>
+                                    <div class="fade-text">
+                                        <span class="fade-bs">BS</span>
+                                        <span class="fade-it">IT</span>
+                                        <span class="fade-neust">NEUST</sp>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -1082,11 +1087,6 @@
                             data-aos-anchor-placement="center-bottom"
                         >
                             <div class="sub-card-top">
-                                <div class="fade-text">
-                                    <span class="fade-bs">BS</span>
-                                    <span class="fade-it">IT</span>
-                                    <span class="fade-neust">NEUST</sp>
-                                </div>
                                 <div class="sub-card-top-left">
                                     <p>CODE: <span>IT-NET01</span></p>
                                     <p>Networking 1, Fundamentals</p>
@@ -1157,6 +1157,11 @@
                                             <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
                                         </button>
                                     </div>
+                                    <div class="fade-text">
+                                        <span class="fade-bs">BS</span>
+                                        <span class="fade-it">IT</span>
+                                        <span class="fade-neust">NEUST</sp>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -1168,11 +1173,6 @@
                             data-aos-anchor-placement="center-bottom"
                         >
                             <div class="sub-card-top">
-                                <div class="fade-text">
-                                    <span class="fade-bs">BS</span>
-                                    <span class="fade-it">IT</span>
-                                    <span class="fade-neust">NEUST</sp>
-                                </div>
                                 <div class="sub-card-top-left">
                                     <p>CODE: <span>FIL 1</span></p>
                                     <p>Kontekswalisadong Komunikasyon sa Filipino</p>
@@ -1252,6 +1252,11 @@
                                             <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
                                         </button>
                                     </div>
+                                    <div class="fade-text">
+                                        <span class="fade-bs">BS</span>
+                                        <span class="fade-it">IT</span>
+                                        <span class="fade-neust">NEUST</sp>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -1276,11 +1281,6 @@
                             data-aos-anchor-placement="center-bottom"
                         >
                             <div class="sub-card-top">
-                                <div class="fade-text">
-                                    <span class="fade-bs">BS</span>
-                                    <span class="fade-it">IT</span>
-                                    <span class="fade-neust">NEUST</sp>
-                                </div>
                                 <div class="sub-card-top-left">
                                     <p>CODE: <span>GE 07</span></p>
                                     <p>Science, Technology and Society</p>
@@ -1355,6 +1355,11 @@
                                             <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
                                         </button>
                                     </div>
+                                    <div class="fade-text">
+                                        <span class="fade-bs">BS</span>
+                                        <span class="fade-it">IT</span>
+                                        <span class="fade-neust">NEUST</sp>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -1366,11 +1371,6 @@
                             data-aos-anchor-placement="center-bottom"
                         >
                             <div class="sub-card-top">
-                                <div class="fade-text">
-                                    <span class="fade-bs">BS</span>
-                                    <span class="fade-it">IT</span>
-                                    <span class="fade-neust">NEUST</sp>
-                                </div>
                                 <div class="sub-card-top-left">
                                     <p>CODE: <span>GE 04</span></p>
                                     <p>Mathematics in the Modern World</p>
@@ -1454,6 +1454,11 @@
                                             <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
                                         </button>
                                     </div>
+                                    <div class="fade-text">
+                                        <span class="fade-bs">BS</span>
+                                        <span class="fade-it">IT</span>
+                                        <span class="fade-neust">NEUST</sp>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -1478,11 +1483,6 @@
                             data-aos-anchor-placement="center-bottom"
                         >
                             <div class="sub-card-top">
-                                <div class="fade-text">
-                                    <span class="fade-bs">BS</span>
-                                    <span class="fade-it">IT</span>
-                                    <span class="fade-neust">NEUST</sp>
-                                </div>
                                 <div class="sub-card-top-left">
                                     <p>CODE: <span>NSTP 11</span></p>
                                     <p>National Service Training Program 1</p>
@@ -1547,7 +1547,8 @@
                                         </div>
                                     </div>
                                     <button class="close-sat-1 remove"><i
-                                            class="fa-solid fa-xmark"></i></button>
+                                            class="fa-solid fa-xmark"></i>
+                                    </button>
                                 </div>
                                 <div class="sat-1-body content-body">
                                     <div class="topic-body" data-reminder-id="reminder-13">
@@ -1562,6 +1563,11 @@
                                         <button class="help-button">
                                             <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
                                         </button>
+                                    </div>
+                                    <div class="fade-text">
+                                        <span class="fade-bs">BS</span>
+                                        <span class="fade-it">IT</span>
+                                        <span class="fade-neust">NEUST</sp>
                                     </div>
                                 </div>
                             </div>
