--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <title>BSIT 1-A</title>
 </head>
 
-<body oncontextmenu="return false;">
+<body oncontextmenu="return true;">
     <section class="intro" id="intro">
         <header class="header">
             <nav class="navbar">
@@ -145,7 +145,7 @@
                 <div class='el'></div>
                 <div class='el'></div>
                 <div class='el'></div>
-            </div>
+            </div>                              
         </div>
         <div class="page_b" id="officers">
             <div class="circle"></div>
@@ -314,7 +314,7 @@
                             data-aos-anchor-placement="center-bottom"
                         >
                             <div class="sub-card-top">
-                           <!-- <div class="fade-text">
+                            <!-- <div class="fade-text">
                                     <span class="fade-bs">BS</span>
                                     <span class="fade-it">IT</span>
                                     <span class="fade-neust">NEUST</sp>
