--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <title>BSIT 1-A</title>
 </head>
 
-<body oncontextmenu="return true;">
+<body oncontextmenu="return false;">
     <section class="intro" id="intro">
         <header class="header">
             <nav class="navbar">
