--- a/index.html
+++ b/index.html
@@ -905,7 +905,7 @@
                                     <p>CODE: <span>IT-NET01</span></p>
                                     <p>Networking 1, Fundamentals</p>
                                     <p>W 11:00 AM - 12:00 PM</p>
-                                    <p>UCC 1</p>
+                                    <p><i>Individual Learning Program</i></p>
                                     <div id="schedule7" class="schedule"></div>
                                 </div>
                                 <div class="sub-card-top-right">
