--- a/index.html
+++ b/index.html
@@ -358,6 +358,7 @@
                                                             download><i class="fa-regular fa-file-pdf"></i>
                                                             Syllabus</a>
                                                     </li>
+                                                    <div class="dropdown-divider"></div>
                                                     <li class="module-item">
                                                         <a href="FILES/CC-101 CP1F/CC-101 WorkText v4 Unit1-7.pdf"
                                                             download><i class="fa-regular fa-file-pdf"></i> M UNIT
@@ -564,6 +565,17 @@
                                                             download><i class="fa-regular fa-file-pdf"></i>
                                                             M STS-Reviewer</a>
                                                     </li>
+                                                    <li class="module-item">
+                                                        <a href="FILES/STS/HANDOUT-IN-GE-7-BY-OLYMPIA-O-RIOGELON_FINAL-TERM.pdf"
+                                                        download><i class="fa-regular fa-file-pdf"></i>
+                                                        F Handout Module</a>
+                                                    </li>
+                                                    <div class="dropdown-divider"></div>
+                                                    <li class="module-item">
+                                                        <a href="FILES/STS/APA-7th-Edition-Format.docx"
+                                                            download><i class="fa-regular fa-file-word"></i>
+                                                            APA 7th Ed. Format </a>
+                                                    </li>
                                                 </ul>
                                             </div>
                                         </div>
@@ -639,14 +651,15 @@
                                                              M Mod-Unit-2</a>
                                                     </li>
                                                     <li class="module-item">
+                                                        <a href="FILES/PE 1/PATHFit-1-Module-Unit-3.pdf"
+                                                        download><i class="fa-regular fa-file-pdf"></i>
+                                                        M Mod-Unit-3</a>
+                                                    </li>
+                                                    <div class="dropdown-divider"></div>
+                                                    <li class="module-item">
                                                         <a href="FILES/PE 1/PATHFit-1-Module-Unit-2.docx"
                                                             download><i class="fa-regular fa-file-word"></i>
                                                              M Mod-Unit-2</a>
-                                                    </li>
-                                                    <li class="module-item">
-                                                        <a href="FILES/PE 1/PATHFit-1-Module-Unit-3.pdf"
-                                                            download><i class="fa-regular fa-file-pdf"></i>
-                                                             M Mod-Unit-3</a>
                                                     </li>
                                                     <li class="module-item">
                                                         <a href="FILES/PE 1/PATHFit-1-Module-Unit-2.docx"
@@ -940,15 +953,15 @@
                                                                 Unofficial Module</a>
                                                     </li>
                                                     <li class="module-item">
-                                                        Source <a
-                                                            href="https://bsit1a2324.s3.us-west-1.amazonaws.com/ITNET01/ITNET01+Reference+Book.pdf"><i
+                                                        <a href="FILES/ITNET01/IT-NET01-Reviewer.pdf" download><i
+                                                            class="fa-regular fa-file-pdf"></i> 
+                                                            M ITNET01-Reviewer</a>
+                                                    </li>
+                                                    <div class="dropdown-divider"></div>
+                                                    <li class="module-item">
+                                                        <a href="https://bsit1a2324.s3.us-west-1.amazonaws.com/ITNET01/ITNET01+Reference+Book.pdf"><i
                                                                 class="fa-solid fa-link"></i>
                                                             bsit1a2324.s3.us-west-1.amazonaws.com</a>
-                                                    </li>
-                                                    <li class="module-item">
-                                                        <a href="FILES/ITNET01/IT-NET01-Reviewer.pdf" download><i
-                                                                class="fa-regular fa-file-pdf"></i> 
-                                                                M ITNET01-Reviewer</a>
                                                     </li>
                                                 </ul>
                                             </div>
@@ -1025,6 +1038,7 @@
                                                             download><i class="fa-regular fa-file-pdf"></i>
                                                             Syllabus</a>
                                                     </li>
+                                                    <div class="dropdown-divider"></div>
                                                     <li class="module-item">
                                                         <a href="FILES/CC-101 CP1F/CC-101 WorkText v4 Unit1-7.pdf"
                                                             download><i class="fa-regular fa-file-pdf"></i> M UNIT
@@ -1118,15 +1132,15 @@
                                                                 Unofficial Module</a>
                                                     </li>
                                                     <li class="module-item">
-                                                        Source <a
-                                                            href="https://bsit1a2324.s3.us-west-1.amazonaws.com/ITNET01/ITNET01+Reference+Book.pdf"><i
+                                                        <a href="FILES/ITNET01/IT-NET01-Reviewer.pdf" download><i
+                                                            class="fa-regular fa-file-pdf"></i> 
+                                                            M ITNET01-Reviewer</a>
+                                                    </li>
+                                                    <div class="dropdown-divider"></div>
+                                                    <li class="module-item">
+                                                        <a href="https://bsit1a2324.s3.us-west-1.amazonaws.com/ITNET01/ITNET01+Reference+Book.pdf"><i
                                                                 class="fa-solid fa-link"></i>
                                                             bsit1a2324.s3.us-west-1.amazonaws.com</a>
-                                                    </li>
-                                                    <li class="module-item">
-                                                        <a href="FILES/ITNET01/IT-NET01-Reviewer.pdf" download><i
-                                                                class="fa-regular fa-file-pdf"></i> 
-                                                                M ITNET01-Reviewer</a>
                                                     </li>
                                                 </ul>
                                             </div>
@@ -1324,6 +1338,17 @@
                                                             download><i class="fa-regular fa-file-pdf"></i>
                                                             M STS-Reviewer</a>
                                                     </li>
+                                                    <li class="module-item">
+                                                        <a href="FILES/STS/HANDOUT-IN-GE-7-BY-OLYMPIA-O-RIOGELON_FINAL-TERM.pdf"
+                                                        download><i class="fa-regular fa-file-pdf"></i>
+                                                        F Handout Module</a>
+                                                    </li>
+                                                    <div class="dropdown-divider"></div>
+                                                    <li class="module-item">
+                                                        <a href="FILES/STS/APA-7th-Edition-Format.docx"
+                                                            download><i class="fa-regular fa-file-word"></i>
+                                                            APA 7th Ed. Format </a>
+                                                    </li>
                                                 </ul>
                                             </div>
                                         </div>
@@ -1398,6 +1423,7 @@
                                                             download><i class="fa-regular fa-file-pdf"></i> GE
                                                             04 Syllabus</a>
                                                     </li>
+                                                    <div class="dropdown-divider"></div>
                                                     <li class="module-item">
                                                         <a href="FILES/GE 04 MMW/MMW_Lesson_1.pdf"
                                                             download><i class="fa-regular fa-file-pdf"></i> 
@@ -1515,6 +1541,7 @@
                                                                 class="fa-regular fa-file-pdf"></i> 
                                                                 M Module 1</a>
                                                     </li>
+                                                    <div class="dropdown-divider"></div>
                                                     <li class="module-item">
                                                         <a href="FILES/NSTP/UNIT-II.pdf" download><i
                                                                 class="fa-regular fa-file-pdf"></i> 
