--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <title>BSIT 1-A</title>
 </head>
 
-<body oncontextmenu="return false;">
+<body oncontextmenu="return true;">
     <section class="intro" id="intro">
         <header class="header">
             <nav class="navbar">
@@ -94,6 +94,10 @@
         </header>
         <div class="overlay"></div>
         <div class="home-content" id="home">
+            <img class="large-logo" src="/images/NEUST-inner.png" alt="NEUST-inner" >
+            <img class="large-logo" src="/images/NEUST-outer.png" alt="NEUST-outer">
+            <img class="large-logo" src="/images/CICT-inner.png" alt="CICT-inner">
+            <img class="large-logo" src="/images/CICT-outer.png" alt="CICT-outer">
             <div class="intro-text">
                 <div class="intro-title">
                     <p  data-aos="fade-zoom-in" 
