--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <title>BSIT 1-A</title>
 </head>
 
-<body oncontextmenu="return false;">
+<body oncontextmenu="return true;">
     <section class="intro" id="intro">
         <header class="header">
             <nav class="navbar">
@@ -81,14 +81,14 @@
                         </div>
                     </li>
                 </ul>
-                <a href="https://neust.edu.ph/" target="_blank" class="nav-logo"
+                <a href="" class="nav-logo"
                     data-aos="fade-zoom-in" 
                     data-aos-easing="ease"
                     data-aos-duration="500" 
                     data-aos-delay="100"
                 >
-                    <img src="images/NEUST-inner.png" alt="cict">
-                    <img src="images/NEUST-outer.png" alt="cict">
+                    <img src="images/1A.png" alt="cict">
+                    <!-- <img src="images/NEUST-outer.png" alt="cict"> -->
                 </a>
             </nav>
         </header>
