--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         </div>
                     </li>
                 </ul>
-                <a href="" class="nav-logo"
+                <div href="" class="nav-logo"
                     data-aos="fade-zoom-in" 
                     data-aos-easing="ease"
                     data-aos-duration="500" 
@@ -89,7 +89,7 @@
                 >
                     <img src="images/1A.png" alt="cict">
                     <!-- <img src="images/NEUST-outer.png" alt="cict"> -->
-                </a>
+                </div>
             </nav>
         </header>
         <div class="overlay"></div>
