--- a/index.html
+++ b/index.html
@@ -1648,7 +1648,7 @@
         <footer>
             <div class="footer-container">
                 <div class="developer">
-                    <p>Developed by <a href="https://cedricangulo.vercel.app" target="_blank">Cedric Angulo</a></p><p class="lastUp">Last update: Mon, Nov 7, 2023 18:54:13</p>
+                    <p>Developed by <a href="https://cedricangulo.vercel.app" target="_blank">Cedric Angulo</a></p><p class="lastUp"></p>
                 </div>
                 <div class="vercel">
                     <div class="vercel-text">
