--- a/index.html
+++ b/index.html
@@ -1602,6 +1602,7 @@
                 </div>
             </div>
         </div>
+        <!--
         <div class="page_d" id="">
             <div class="page_d_title"
                 data-aos="fade-zoom-in" 
@@ -1644,7 +1645,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <footer>
             <div class="footer-container">
                 <div class="developer">
