--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                     user-scalable=no">
     <meta property="og:title" content="BSIT 1-A Class Directory">
     <meta property="og:description" content="Enhance your academic experience with the BSIT 1-A Class Directory">
-    <meta property="og:image" content="https://sumacab1absit.vercel.app/images/1A.png">
+    <meta property="og:image" content="https://sumacab1absit.vercel.app/images/received_1413044552608119.jpeg">
     <meta property="og:url" content="https://sumacab1absit.vercel.app">
     <meta property="og:type" content="website">
     <link   rel="stylesheet" 
