--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="BSIT 1-A Class Directory">
     <meta property="og:description" content="Enhance your academic experience with the BSIT 1-A Class Directory">
     <meta property="og:image" content="https://sumacabbsit1a.vercel.app/images/received_1413044552608119.jpeg">
-    <meta property="og:url" content="https://sumacab1absit.vercel.app">
+    <meta property="og:url" content="https://sumacabbsit1a.vercel.app">
     <meta property="og:type" content="website">
     <link   rel="stylesheet" 
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
