--- a/index.html
+++ b/index.html
@@ -1611,7 +1611,7 @@
                 data-aos-anchor-placement="center-bottom"
             >
                 <p>
-                    STUDENTS OF THE WEEK
+                    STUDENTS OF THE MONTH na nga lang
                 </p>
             </div>
             <div class="page_d_container">
