--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                                         <i class="fa-solid fa-clipboard"></i> Copy Text
                                     </button>
                                     <button class="help-button">
-                                        <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
+                                        <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i></a>
                                     </button>
                                 </div>
                                 <div class="fade-text">
@@ -485,7 +485,7 @@
                                         <i class="fa-solid fa-clipboard"></i> Copy Text
                                     </button>
                                     <button class="help-button">
-                                        <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
+                                        <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i></a>
                                     </button>
                                 </div>
                                 <div class="fade-text">
@@ -598,7 +598,7 @@
                                         <i class="fa-solid fa-clipboard"></i> Copy Text
                                     </button>
                                     <button class="help-button">
-                                        <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
+                                        <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i></a>
                                     </button>
                                 </div>
                                 <div class="fade-text">
@@ -688,7 +688,7 @@
                                         <i class="fa-solid fa-clipboard"></i> Copy Text
                                     </button>
                                     <button class="help-button">
-                                        <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
+                                        <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i></a>
                                     </button>
                                 </div>
                                 <div class="fade-text">
@@ -799,7 +799,7 @@
                                         <i class="fa-solid fa-clipboard"></i> Copy Text
                                     </button>
                                     <button class="help-button">
-                                        <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
+                                        <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i></a>
                                     </button>
                                 </div>
                                 <div class="fade-text">
@@ -901,7 +901,7 @@
                                         <i class="fa-solid fa-clipboard"></i> Copy Text
                                     </button>
                                     <button class="help-button">
-                                        <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
+                                        <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i></a>
                                     </button>
                                 </div>
                                 <div class="fade-text">
@@ -986,7 +986,7 @@
                                         <i class="fa-solid fa-clipboard"></i> Copy Text
                                     </button>
                                     <button class="help-button">
-                                        <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
+                                        <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i></a>
                                     </button>
                                 </div>
                                 <div class="fade-text">
@@ -1067,7 +1067,7 @@
                                         <i class="fa-solid fa-clipboard"></i> Copy Text
                                     </button>
                                     <button class="help-button">
-                                        <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
+                                        <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i></a>
                                     </button>
                                 </div>
                                 <div class="fade-text">
@@ -1165,7 +1165,7 @@
                                         <i class="fa-solid fa-clipboard"></i> Copy Text
                                     </button>
                                     <button class="help-button">
-                                        <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
+                                        <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i></a>
                                     </button>
                                 </div>
                                 <div class="fade-text">
@@ -1260,7 +1260,7 @@
                                         <i class="fa-solid fa-clipboard"></i> Copy Text
                                     </button>
                                     <button class="help-button">
-                                        <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
+                                        <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i></a>
                                     </button>
                                 </div>
                                 <div class="fade-text">
@@ -1373,7 +1373,7 @@
                                         <i class="fa-solid fa-clipboard"></i> Copy Text
                                     </button>
                                     <button class="help-button">
-                                        <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
+                                        <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i></a>
                                     </button>
                                 </div>
                                 <div class="fade-text">
@@ -1478,7 +1478,7 @@
                                         <i class="fa-solid fa-clipboard"></i> Copy Text
                                     </button>
                                     <button class="help-button">
-                                        <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
+                                        <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i></a>
                                     </button>
                                 </div>
                                 <div class="fade-text">
@@ -1588,7 +1588,7 @@
                                         <i class="fa-solid fa-clipboard"></i> Copy Text
                                     </button>
                                     <button class="help-button">
-                                        <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
+                                        <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i></a>
                                     </button>
                                 </div>
                                 <div class="fade-text">
