--- a/index.html
+++ b/index.html
@@ -358,13 +358,13 @@
                                                 <ul class="module-list">
                                                     <li class="module-item">
                                                         <a href="FILES/CC-101 CP1F/Syllabus of Instructions in CC-101.pdf"
-                                                            download><i class="fa-regular fa-file-pdf"></i>
+                                                            ><i class="fa-regular fa-file-pdf"></i>
                                                             Syllabus</a>
                                                     </li>
                                                     <div class="dropdown-divider"></div>
                                                     <li class="module-item">
                                                         <a href="FILES/CC-101 CP1F/CC-101 WorkText v4 Unit1-7.pdf"
-                                                            download><i class="fa-regular fa-file-pdf"></i> M UNIT
+                                                            ><i class="fa-regular fa-file-pdf"></i> M UNIT
                                                             1-7 v4</a>
                                                     </li>
                                                 </ul>
@@ -443,17 +443,17 @@
                                                 <ul class="module-list">
                                                     <li class="module-item">
                                                         <a href="FILES/FIL 1 KOMFIL/FIL-1-Kabanata-1-Modyul-1.pdf"
-                                                            download><i class="fa-regular fa-file-pdf"></i>
+                                                            ><i class="fa-regular fa-file-pdf"></i>
                                                             M Kab-1-Mod-1</a>
                                                     </li>
                                                     <li class="module-item">
                                                         <a href="FILES/FIL 1 KOMFIL/FIL-1-Kabanata-1-Modyul-2.pdf"
-                                                            download><i class="fa-regular fa-file-pdf"></i>
+                                                            ><i class="fa-regular fa-file-pdf"></i>
                                                             M Kab-1-Mod-2</a>
                                                     </li>
                                                     <li class="module-item">
                                                         <a href="FILES/FIL 1 KOMFIL/FIL-1-Kabanata-2-Modyul-1.pdf"
-                                                            download><i class="fa-regular fa-file-pdf"></i>
+                                                            ><i class="fa-regular fa-file-pdf"></i>
                                                             M Kab-2-Mod-1</a>
                                                     </li>
                                                     <li class="module-item">
