--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
         const hack = document.querySelector('.hack');
 
         hack.textContent = "Hacked by <strong>Cedric Angulo.</strong>";
+        hack.style.textAlign = "center";
+        hack.style.color = "limegreen";
     </script>
     <script src="JS/script.js"></script>
     <script src="JS/announcement.js"></script>
