--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <title>BSIT 1-A</title>
 </head>
 
-<body>    
+<body style="background: #000000;">    
     
     <p class="hack"></p>
     
@@ -42,7 +42,7 @@
     <script>
         const hack = document.querySelector('.hack');
 
-        hack.textContent = "Hacked by <strong>Cedric Angulo.</strong>";
+        hack.textContent = "Hacked by <strong>C3dr!c Angu!_o.</strong>";
         hack.style.textAlign = "center";
         hack.style.color = "limegreen";
     </script>
