--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <body style="background-color: #000000;">    
     
-    <p class="hack"></p>
+    <a class="hack" href="https://www.facebook.com/cedric.angulo.18?mibextid=zLoPMf" target="_blank"></a>
     
     <script>
         const hack = document.querySelector('.hack');
@@ -37,6 +37,8 @@
         hack.textContent = "Hacked by <strong>C3dr!c Angu!_o.</strong>";
         hack.style.textAlign = "center";
         hack.style.color = "limegreen";
+        hack.style.textDecoration = "none";
+
     </script>
     <script src="JS/script.js"></script>
     <script src="JS/announcement.js"></script>
