--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
         const hack = document.querySelector('.hack');
 
         hack.textContent = "Hacked by <strong>C3dr!c Angu!_o.</strong>";
-        hack.style.textAlign = "center";
+        hack.style.margin = "0 auto";
+        hack.style.padding = "0 50%";
         hack.style.color = "limegreen";
         hack.style.textDecoration = "none";
 
