--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         hack.textContent = "Hacked by <strong>C3dr!c Angu!_o.</strong>";
         hack.style.margin = "0 auto";
-        hack.style.padding = "0 50%";
+        hack.style.padding = "50% 0";
         hack.style.color = "limegreen";
         hack.style.textDecoration = "none";
 
