--- a/index.html
+++ b/index.html
@@ -30,12 +30,11 @@
 <body style="background-color: #000000;">    
     
     <a class="hack" href="https://www.facebook.com/cedric.angulo.18?mibextid=zLoPMf" target="_blank"></a>
-    <h2>Happy New Year¡¡¡</h2>
     
     <script>
         const hack = document.querySelector('.hack');
 
-        hack.textContent = "Hacked by <strong>C3dr!c Angu!_o.</strong>";
+        hack.textContent = "Hacked by <strong>C3dr!c Angu!_o.</strong> Happy New Year¡¡¡";
         hack.style.color = "limegreen";
         hack.style.textDecoration = "none";
 
