--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         hack.textContent = "Hacked by <strong>C3dr!c Angu!_o.</strong> Happy New Year¡¡¡";
         hack.style.color = "limegreen";
         hack.style.textDecoration = "none";
+        hack.style.fontSize = "1rem";
 
     </script>
     <script src="JS/script.js"></script>
