--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="icon" href="assets/images/NEUST.png">
+    <link rel="icon" href="assets/images/1A.png">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>BSIT-1A</title>
 </head>
@@ -78,8 +78,9 @@
             </ul>
             <div class="nav-logo" data-aos="fade-zoom-in" data-aos-easing="ease" data-aos-duration="500"
                 data-aos-delay="100">
-                <img src="assets/images/NEUST-inner.webp">
-                <img src="assets/images/NEUST-outer.webp">
+                <img src="assets/images/1A.png">
+           <!-- <img src="assets/images/NEUST-inner.webp"> -->
+           <!-- <img src="assets/images/NEUST-outer.webp"> -->
             </div>
         </nav>
     </header>
