--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
                                                 <div class="dropdown-divider"></div>
                                                 <li class="module-item">
                                                     <p>------</p>
-                                                    <!-- <a href="documents/docx/" target="_blank"><i class="fa-regular fa-file-word"></i></a> -->
+                                                    <!-- <a href="documents/pdf/Module-1-Introduction-to-Web-Development.pdf" target="_blank"><i class="fa-regular fa-file-word"></i></a> -->
                                                 </li>
                                             </ul>
                                         </div>
