--- a/index.html
+++ b/index.html
@@ -389,12 +389,12 @@
                                             <ul class="module-list">
                                                 <li class="module-item">
                                                     <p>------</p>
-                                                    <!-- <a href="documents/pdfs/Module-1-Introduction-to-Web-Development.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i></a> -->
+                                                    <!-- <a href="documents/pdfs/" target="_blank"><i class="fa-regular fa-file-pdf"></i></a> -->
                                                 </li>
                                                 <div class="dropdown-divider"></div>
                                                 <li class="module-item">
                                                     <p>------</p>
-                                                    <!-- <a href="documents/pdf/Module-1-Introduction-to-Web-Development.pdf" target="_blank"><i class="fa-regular fa-file-word"></i></a> -->
+                                                    <!-- <a href="documents/docx/" target="_blank"><i class="fa-regular fa-file-word"></i></a> -->
                                                 </li>
                                             </ul>
                                         </div>
