--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
                         </div>
                         <div class="sub-card-bottom">
                             <div class="sub-card-bottom-left">
-                                <p>Torres, Rhoel Anthony G.</p>
+                                <p>Conchanco, Alexander</p>
                             </div>
                             <div class="sub-card-bottom-right">
                                 <button class="btnn m_5 schedbutton">Open <span class="material-symbols-outlined">navigate_next</span>
