--- a/index.html
+++ b/index.html
@@ -450,8 +450,7 @@
                                                 </li>
                                                 <div class="dropdown-divider"></div>
                                                 <li class="module-item">
-                                                    <p>------</p>
-                                                    <!-- <a href="documents/docx/" target="_blank"><i class="fa-regular fa-file-word"></i></a> -->
+                                                     <a href="documents/docx/Chapter-1-ITNET02.docx" target="_blank"><i class="fa-regular fa-file-word"></i>Chapter 1</a> 
                                                 </li>
                                             </ul>
                                         </div>
