--- a/index.html
+++ b/index.html
@@ -816,15 +816,14 @@
                                             Files
                                         </button>
                                         <div class="dropdown-menu">
-                                            <ul class="module-list">
+                                             <ul class="module-list">
                                                 <li class="module-item">
                                                     <p>------</p>
                                                     <!-- <a href="documents/pdfs/" target="_blank"><i class="fa-regular fa-file-pdf"></i></a> -->
                                                 </li>
                                                 <div class="dropdown-divider"></div>
                                                 <li class="module-item">
-                                                    <p>------</p>
-                                                    <!-- <a href="documents/docx/" target="_blank"><i class="fa-regular fa-file-word"></i></a> -->
+                                                     <a href="documents/docx/Chapter-1-ITNET02.docx" target="_blank"><i class="fa-regular fa-file-word"></i>Chapter 1</a> 
                                                 </li>
                                             </ul>
                                         </div>
