--- a/index.html
+++ b/index.html
@@ -453,6 +453,36 @@
                                                      <a href="documents/docx/Chapter-1-ITNET02.docx" target="_blank"><i class="fa-regular fa-file-word"></i>Chapter 1</a> 
                                                 </li>
                                             </ul>
+                                              <ul class="module-list">
+                                                <li class="module-item">
+                                                    <p>------</p>
+                                                    <!-- <a href="documents/pdfs/" target="_blank"><i class="fa-regular fa-file-pdf"></i></a> -->
+                                                </li>
+                                                <div class="dropdown-divider"></div>
+                                                <li class="module-item">
+                                                     <a href="documents/docx/Chapter-2-ITNET02.docx" target="_blank"><i class="fa-regular fa-file-word"></i>Chapter 1</a> 
+                                                </li>
+                                            </ul>
+                                              <ul class="module-list">
+                                                <li class="module-item">
+                                                    <p>------</p>
+                                                    <!-- <a href="documents/pdfs/" target="_blank"><i class="fa-regular fa-file-pdf"></i></a> -->
+                                                </li>
+                                                <div class="dropdown-divider"></div>
+                                                <li class="module-item">
+                                                     <a href="documents/docx/Chapter-3-ITNET02.docx" target="_blank"><i class="fa-regular fa-file-word"></i>Chapter 1</a> 
+                                                </li>
+                                            </ul>
+                                              <ul class="module-list">
+                                                <li class="module-item">
+                                                    <p>------</p>
+                                                    <!-- <a href="documents/pdfs/" target="_blank"><i class="fa-regular fa-file-pdf"></i></a> -->
+                                                </li>
+                                                <div class="dropdown-divider"></div>
+                                                <li class="module-item">
+                                                     <a href="documents/docx/Chapter-4-ITNET02.docx" target="_blank"><i class="fa-regular fa-file-word"></i>Chapter 1</a> 
+                                                </li>
+                                            </ul>
                                         </div>
                                     </div>
                                 </div>
@@ -887,15 +917,14 @@
                                             Files
                                         </button>
                                         <div class="dropdown-menu">
-                                            <ul class="module-list">
+                                             <ul class="module-list">
                                                 <li class="module-item">
                                                     <p>------</p>
                                                     <!-- <a href="documents/pdfs/" target="_blank"><i class="fa-regular fa-file-pdf"></i></a> -->
                                                 </li>
                                                 <div class="dropdown-divider"></div>
                                                 <li class="module-item">
-                                                    <p>------</p>
-                                                    <!-- <a href="documents/docx/" target="_blank"><i class="fa-regular fa-file-word"></i></a> -->
+                                                     <a href="documents/docx/Chapter-1-ITNET02.docx" target="_blank"><i class="fa-regular fa-file-word"></i>Chapter 1</a> 
                                                 </li>
                                             </ul>
                                         </div>
